@@ -1,21 +1,0 @@
-aclocal.m4
-autom4te-2.53.cache
-autom4te.cache
-config.guess
-config.log
-config.status
-config.sub
-configure
-configure.ac
-depcomp
-install-sh
-unshield.spec
-libtool
-ltmain.sh
-Makefile
-Makefile.in
-missing
-mkinstalldirs
-stamp-h
-stamp-h1
-stamp-h.in
