@@ -1,66 +1,0 @@
-# vim: tw=60
-%define prefix   /usr
-%define name     unshield
-%define rel      1
-
-Summary: A program to extract InstallShield cabinet files
-Name: %{name}
-Version: YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT
-Release: %{rel}
-License: MIT
-Group: Applications/Archiving
-Source: %{name}-%{version}.tar.gz
-URL: http://synce.sourceforge.net/
-Distribution: SynCE RPM packages
-Vendor: The SynCE Project
-Packager: David Eriksson <twogood@users.sourceforge.net>
-Buildroot: %{_tmppath}/%{name}-%{version}-%{release}-root
-Requires: zlib
-BuildRequires: zlib-devel
-
-%description
-Cabinet (.CAB) files are a form of archive, which is used by
-the InstallShield installer software. The unshield program
-simply unpacks such files.
-
-See http://synce.sourceforge.net/ for more information.
-
-%package devel
-Summary:  A library to extract InstallShield cabinet files
-Group:    Development/Libraries
-Requires: %{name} = %{version}
-Requires: zlib-devel
-
-%description devel
-Cabinet (.CAB) files are a form of archive, which is used by
-the InstallShield installer software. The unshield program
-simply unpacks such files.
-
-See http://synce.sourceforge.net/ for more information.
-
-
-%prep
-rm -rf $RPM_BUILD_ROOT
-%setup
-
-%build
-%configure
-make
-
-%install
-%makeinstall
-
-%files
-%defattr(-,root,root)
-%doc README LICENSE
-%{_bindir}/unshield
-%{_libdir}/libunshield.so.*
-
-%files devel
-%defattr(-,root,root)
-%{_includedir}/libunshield.h
-%{_libdir}/libunshield.so
-%{_libdir}/libunshield.a
-%{_libdir}/libunshield.la
-%{_datadir}/aclocal
-
