@@ -1,5 +1,16 @@
 2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>
 
+	* .cvsignore:
+	* cvsclean:
+	* lib/.cvsignore:
+	* lib/md5/.cvsignore:
+	* src/.cvsignore: Removed useless CVS ignore and clean files.
+
+	* bootstrap:
+	* unshield.spec.in: Removed spec file.
+
+2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>
+
 	* VERSION: Upped version number to 0.5.1.
 
 2008-02-15  Mark Ellis <mark@mpellis.org.uk>
